<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_revisar"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/navbar1"
            tools:targetApi="lollipop" />
        <item
            android:id="@+id/nav_sucursal"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/navbar3" />
        <item
            android:id="@+id/nav_revpedido"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/navbar4" />
        <item
            android:id="@+id/nav_sesion"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/navbar2" />
    </group>

    <item android:title="Communicate">
        <menu></menu>
    </item>

</menu>
