<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="cl.inacap.puntaarenas.evaluacion4.Ordenes.Orden_PC1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/agregar_pc1"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="42dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/Orden"
            android:textColor="@android:color/background_dark"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="416dp" />

        <TextView
            android:id="@+id/precio_pc1"
            android:layout_width="220dp"
            android:layout_height="44dp"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/direccion_pc1"
            android:layout_alignStart="@+id/direccion_pc1"
            android:text="@string/precio_pc1"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="308dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="55dp"
            android:text="@string/precio"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="317dp" />

        <EditText
            android:id="@+id/direccion_pc1"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignLeft="@+id/nombre_cliente_pc1"
            android:layout_alignStart="@+id/nombre_cliente_pc1"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="209dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView16"
            android:layout_alignStart="@+id/textView16"
            android:layout_below="@+id/nombre_cliente_pc1"
            android:layout_marginTop="48dp"
            android:text="@string/direccion_cliente"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="242dp" />

        <EditText
            android:id="@+id/nombre_cliente_pc1"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignLeft="@+id/producto_pc1"
            android:layout_alignStart="@+id/producto_pc1"
            android:ems="10"
            android:inputType="textPersonName"
            android:singleLine="false"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="137dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="116dp"
            android:layout_height="57dp"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/producto_pc1"
            android:layout_marginTop="24dp"
            android:text="@string/nombre_cliente"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="126dp" />

        <TextView
            android:id="@+id/producto_pc1"
            android:layout_width="218dp"
            android:layout_height="99dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/pc1"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="118dp"
            android:layout_height="61dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/producto_pc1"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/nombre_producto"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
